vlib/v/checker/tests/map_get_value_address_err.vv
fn main() {
    m := {'key' : 3}
    a := &m['key']
    b := &{'foo': 4}['foo']
    println(a)
    println(b)
}
